# try-chitin

./: Cargo.toml  build.rs
client/: api_trait.ts  hand_written.ts  index.js  index.ts
src/: api.rs  api_trait.rs  main.rs  model.rs  query.rs
