[package]
name = "hyper-chitin"
version = "0.1.0"
authors = ["MROS <yc1043@gmail.com>"]
edition = "2018"

[build-dependencies]
chitin = { git = "https://github.com/carbon-bond/chitin" }
serde = { version = "1.0", features = ["derive"] }

[dependencies]
chitin = { git = "https://github.com/carbon-bond/chitin" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1.31"
hyper = "0.13.6"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"
futures-util = "0.3.5"
